# nrf52-test

./: .gitmodules  Cargo.toml  Makefile.toml  README.md  flash.ps1  memory.x  openocd.cfg  openocd.gdb
.cargo/: config.toml
cmsis_dsp.rs/: Cargo.toml
embassy/examples/stm32h5/: Cargo.toml
h7hal/: Cargo.toml
h7lib/: Cargo.toml
h7lib/src/: lib.rs
h7lib/src/other/: pwm.rs
h7lib/src/other/macro/: global.rs  print.rs
h7lib/src/periph/: adc.rs  dma.rs  ethernet.rs  gpio.rs  mod.rs  pwr.rs  rcc.rs  spi.rs  timer.rs
h7lib/src/periph/rcc/: mod.rs
h7lib/src/plugin/: mod.rs  pwm.rs
h7lib/src/plugin/abs_encoder/: mlx90363.rs
h7lib/src/plugin/current_sense/: bldc_current.rs  mod.rs
h7lib/src/plugin/ethernet_phy/: dp83848.rs  mod.rs  net.rs
h7lib/src/plugin/motor_driver/: drv8343.rs
modules/usbd-serial/: Cargo.toml
modules/usbhid/: Cargo.toml
modules/usbhid/src/: fmt.rs  lib.rs
motor_driver/: Cargo.toml
motor_driver/src/: calibration.rs  lib.rs  motor.rs  six_step.rs
motor_driver/src/foc/: mod.rs  pid.rs  smc.rs
src/: DP83848.rs  MLX90363.rs  as5048.rs  defaults.rs  events.rs  main.rs  parameter.rs  stm32.rs
src/communication/: dp83848.rs  mod.rs
src/control/: BLDCDriver.rs  BLDCMotor.rs  foc_util.rs
src/current_sense/: bldc_current.rs
src/resources/: instance.rs  mod.rs  parameter.rs  shared.rs
src/sensor/: LowsideCurrentSense.rs  encoder.rs
src/stm32/: dma.rs  gpdma.rs  gpio.rs  icache.rs  nvic.rs  pwm.rs  rcc.rs  spi.rs  tim.rs  utils.rs
