[package]
authors = ["22266507 <s225130t@st.go.tuat.ac.jp>"]
name = "stm32h743"
edition = "2021"
version = "0.1.0"

[dependencies]
rtt-target = "0.5.0"
panic-rtt-target = { version = "0.1.3" }
# heapless = { version = "0.8", default-features = false }
rtic = { version = "2.1.1", features = ["thumbv7-backend", "rtic-monotonics"] }
cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
h7lib = { version = "0.0.1", path = "./h7lib", features = ["h743v", "h7rt", "ethernet"]}

# cargo build/run
[profile.dev]
opt-level = 0
codegen-units = 16
debug = true
debug-assertions = true
overflow-checks = true

# cargo build/run --release
[profile.release]
opt-level = "s"
codegen-units = 1
debug = 2
debug-assertions = false
overflow-checks = false
lto = 'fat'
