[package]
authors = ["22266507 <s225130t@st.go.tuat.ac.jp>"]
name = "nrf52-test"
edition = "2024"
version = "0.1.0"
build = "build.rs"

[dependencies]
cortex-m = { version = "^0.7.7" }
cortex-m-rt = "^0.7.3"
defmt = "1.1"
defmt-rtt = "1.2.0"
panic-halt = "1.0"

embedded-hal = "1.0.0"
embedded_hal_0_2 = {version = "0.2.5", features = ["unproven"], package = "embedded-hal"}

nrf52840-hal = { version = "0.19" }
usbhid = {version = "0.5.1", path = "./modules/usbhid"}
usbd-serial = {version = "0.2.2", path = "./modules/usbd-serial"}
itoa = { version = "1.0", default-features = false }
heapless = { version = "0.9", default-features = false }
enum-map = "2.7"
libm = { version = "0.2.15" }

# cargo build/run
[profile.dev]
opt-level = 0
codegen-units = 16
debug = true
debug-assertions = true
overflow-checks = true

# cargo build/run --release
[profile.release]
opt-level = "s"
codegen-units = 1
debug = 2
debug-assertions = false
overflow-checks = false
lto = 'fat'
