[package]
name = "motor-driver"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
exclude = [".gitignore"]

[dependencies]
cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
paste = "^1.0.4"
cmsis-dsp = { version = "0.1.0", path = "../cmsis_dsp.rs" }

[features]